Project

General

Profile

Actions

Bug #46677

closed

rgw: lc: fix backdward-compat decode

Added by Matt Benjamin almost 4 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
octopus, nautilus
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The recent parallel-lifecycle update changed the format of in-progress/stored lifecycle entries. The supplied backward-compatible decode and client handling was correct, but incorrectly returned error even after successful retry of the decode using the old format.


Related issues 3 (0 open3 closed)

Related to rgw - Bug #43841: [rfe] rgw: parallelize single-node lifecycle processingResolvedMatt Benjamin

Actions
Copied to rgw - Backport #46872: nautilus: rgw: lc: fix backdward-compat decodeRejectedMatt BenjaminActions
Copied to rgw - Backport #46873: octopus: rgw: lc: fix backdward-compat decodeResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin almost 4 years ago

  • Pull request ID set to 36246
Actions #2

Updated by Matt Benjamin almost 4 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Casey Bodley almost 4 years ago

  • Related to Bug #43841: [rfe] rgw: parallelize single-node lifecycle processing added
Actions #4

Updated by Casey Bodley almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46872: nautilus: rgw: lc: fix backdward-compat decode added
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46873: octopus: rgw: lc: fix backdward-compat decode added
Actions #7

Updated by Backport Bot almost 2 years ago

  • Tags set to backport_processed
Actions #8

Updated by Konstantin Shalygin almost 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF