rgwlc: fix error return from backward-compat decode

Exception handling in backward-compat case returned EIO even when
the actual backward-compat decode succeeded.

Fixes: https://tracker.ceph.com/issues/46677

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit fa3036168b67a191d7ac37d0d34409f5b3d87b5d)