src/cls/rgw/cls_rgw.cc
@@ -3771,13 +3771,14 @@ static int rgw_cls_lc_list_entries(cls_method_context_t hctx, bufferlist *in,
       /* try backward compat */
       pair<string, int> oe;
       try {
+	iter = it->second.begin();
 	decode(oe, iter);
 	entry = {oe.first, 0 /* start */, uint32_t(oe.second)};
       } catch(buffer::error& err) {
 	CLS_LOG(
 	  1, "ERROR: rgw_cls_lc_list_entries(): failed to decode entry\n");
+	return -EIO;
       }
-      return -EIO;
     }
    op_ret.entries.push_back(entry);
   }
